# drone-sim

./: .gitignore  CLAUDE.md  CMakeLists.txt  dev.sh
.claude/: settings.local.json
assets/: drone.glb
assets/shaders/: blur.fs  composite.fs  lighting.fs  lighting.vs  ssao.fs
src/: camera_controller.h  collider.h  component.h  entity.h  ground_renderer.h  main.cpp  mesh_renderer.h  physics_body.h  physics_world.cpp  physics_world.h  render_pipeline.cpp  render_pipeline.h  rlights.h  scene.cpp  scene.h  transform.h  world.h
src/behaviors/: rotor.h
src/components/: camera_controller.h  collider.h  component.h  ground_renderer.h  mesh_renderer.h  physics_body.h  transform.h
src/entities/: camera.cpp  camera.h  drone.cpp  drone.h  groundplane.cpp  groundplane.h
src/utils/: conversions.h
